@@ -5,6 +5,7 @@ on:
     branches:
       - master
 
+
 env:
   FORCE_COLOR: 1
 
@@ -22,17 +23,14 @@ jobs:
         python-version: "3.x"
     - name: Checkout Pygments
       uses: actions/checkout@v3
-    - name: Install Sphinx & WCAG contrast ratio
-      run: pip install Sphinx wcag-contrast-ratio
-    - name: Create Pyodide WASM package
-      run: cd doc && make pyodide
+    - name: Install tox
+      run: pip install -r requirements.txt
     - name: Sphinx build
       run: |
-        cd doc
-        WEBSITE_BUILD=1 make dirhtml
-        touch _build/dirhtml/.nojekyll
-        echo -e 'pygments.org\nwww.pygments.org' > _build/dirhtml/CNAME
-        echo 'Automated deployment of docs for GitHub pages.' > _build/dirhtml/README
+        tox -e web-doc -- dirhtml
+        touch doc/_build/dirhtml/.nojekyll
+        echo -e 'pygments.org\nwww.pygments.org' > doc/_build/dirhtml/CNAME
+        echo 'Automated deployment of docs for GitHub pages.' > doc/_build/dirhtml/README
     - name: Deploy to repo
       if: github.repository_owner == 'pygments'
       uses: peaceiris/actions-gh-pages@v3
