@@ -16,13 +16,13 @@ Documentation
 
 ... can be found online at https://pygments.org/ or created with Sphinx by ::
 
-   make docs
+   tox -e doc
 
 By default, the documentation does not include the demo page, as it requires
 having Docker installed for building Pyodide. To build the documentation with
 the demo page, use ::
 
-   WEBSITE_BUILD=1 make docs
+   tox -e web-doc
 
 The initial build might take some time, but subsequent ones should be instant
 because of Docker caching.
@@ -59,12 +59,12 @@ significant amounts of memory. This can subsequently be used to perform a
 remote denial-of-service attack on the server if the processes are not
 terminated quickly.
 
-Unfortunately, it's practically impossible to harden Pygments itself against 
-those issues: Some regular expressions can result in "catastrophic 
+Unfortunately, it's practically impossible to harden Pygments itself against
+those issues: Some regular expressions can result in "catastrophic
 backtracking", but other bugs like incorrect matchers can also
 cause similar problems, and there is no way to find them in an automated fashion
-(short of solving the halting problem.) Pygments has extensive unit tests, 
-automated randomized testing, and is also tested by `OSS-Fuzz <https://github.com/google/oss-fuzz/tree/master/projects/pygments>`_, 
+(short of solving the halting problem.) Pygments has extensive unit tests,
+automated randomized testing, and is also tested by `OSS-Fuzz <https://github.com/google/oss-fuzz/tree/master/projects/pygments>`_,
 but we will never be able to eliminate all bugs in this area.
 
 Our recommendations are:
